monitoring/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - grafana.devopsplamen.work
      secretName: devopsplamen-work-tls
  rules:
    - host: grafana.devopsplamen.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: {name: grafana, port: {number: 3000}}
